--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<from method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" min="3" maxlength="50" lable required>
+		<label for="portfolio">Portfolio</label>
+		<input type="url" id="Portfolio" lable required>
+		<label for="favcolor">Favorite Color</label>
+		<input type="color" id="favcolor" lable required>
+		<label for="likeness">Likeness</label>
+		<input type="range" id="likeness" min="1" max="100" lable required>
+	</from>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
