--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<from action="submit" method="post">
+	<h1>Feedback From</h1>
+	<from method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
 		<label for="Portfolio">Portfolio</label>
@@ -16,8 +17,6 @@
 		<input type="color" id="favcolor" name="favcolor" required>
 		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" name="likeness" min="1" max="100" required>
-		
-		<button type="submit">submit</button>
 	</from>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
