--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<h1>Feedback From</h1>
-	<from method="post">
+	<from method="POST">
 		<label for="name">Name</label>
 		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
 		<label for="Portfolio">Portfolio</label>
-		<input type="url" id="Portfolio" name="Portfolio" required>
+		<input type="url" id="Portfolio" required>
 		<label for="favColor">Favorite Color</label>
 		<input type="color" id="favcolor" name="favcolor" required>
 		<label for="likeness">Likeness</label>
