--- a/main.html
+++ b/main.html
@@ -10,13 +10,19 @@
 	<h1>Feedback From</h1>
 	<from method="POST">
 		<label for="name">Name</label>
-		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+	    <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+
 		<label for="Portfolio">Portfolio</label>
-		<input type="url" id="Portfolio" required>
+        <input type="url" id="Portfolio" required>
+	 	
 		<label for="favColor">Favorite Color</label>
 		<input type="color" id="favcolor" name="favcolor" required>
+		
 		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" name="likeness" min="1" max="100" required>
+   
+		<input type="submit" value="submit">	
+
 	</from>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
